--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "nuxt-app",
   "private": true,
+  "overrides": {
+    "vue": "latest"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -10,6 +13,13 @@
   },
   "devDependencies": {
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "nuxt": "^3.5.2",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
+    "normalize.css": "^8.0.1",
+    "pinia": "^2.1.3"
   }
 }
