--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3"
   }
